--- a/solertia.html
+++ b/solertia.html
@@ -237,10 +237,9 @@
     <header class="sticky top-0 bg-white shadow-md z-50 transition-transform duration-300">
         <div class="container mx-auto px-4 py-3 flex justify-between items-center">
             <div class="flex items-center logo-container">
-                <div
-                    class="h-14 w-14 rounded-full bg-gradient-to-br from-[var(--primary)] to-[var(--accent)] flex items-center justify-center mr-3">
-                    <i class="fas fa-sun text-white text-2xl"></i>
-                </div>
+                <img src="Solertia.jpg"
+                    alt="Logo de ECOPAPER S.A. mostrando elementos de papel reciclado con hojas verdes"
+                    class="h-16 mr-3">
                 <span class="text-2xl font-bold text-[var(--primary)]">SOLERTIA <span
                         class="text-[var(--secondary)]">S.A.</span></span>
             </div>
