--- a/ecopaper.html
+++ b/ecopaper.html
@@ -13,8 +13,9 @@
         }
 
         .hero {
-            background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.3)), url('https://placehold.co/1920x1080') no-repeat center center;
+            background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.3)), url('https://static.vecteezy.com/system/resources/thumbnails/057/949/098/small_2x/recycled-paper-texture-with-green-recycling-symbols-for-eco-friendly-designers-and-sustainable-projects-ideal-for-environmental-awareness-campaigns-and-green-initiatives-photo.jpg') no-repeat center center;
             background-size: cover;
+            background-position: center top;
         }
 
         .eco-green {
