actualización de instagram

--- a/AloeFresh.html
+++ b/AloeFresh.html
@@ -297,7 +297,6 @@
         }
 
         /* Organigrama*/
-        
     </style>
 </head>
 
@@ -539,7 +538,7 @@
                     </div>
                     <div class="org-node">
                         <h3>Gerencia de Producción</h3>
-                        <p>Juliana Argafia</p>
+                        <p>Juliana Argaña</p>
                     </div>
                     <div class="org-node">
                         <h3>Gerencia de Marketing</h3>
@@ -660,9 +659,24 @@
                         <i class="fas fa-eye text-white text-5xl floating"></i>
                     </div>
                     <div class="p-6">
-                        <h3 class="text-xl font-semibold mb-3 text-[var(--primary)]">Saquitos para Ojeras</h3>
-                        <p class="text-gray-600 mb-4">Reduce la apariencia de ojeras y bolsas con nuestro tratamiento
-                            natural de aloe vera.</p>
+                        <h3 class="text-xl font-semibold mb-3 text-[var(--primary)]">FreshLook Aloe</h3>
+                        <p class="text-gray-600 mb-4">Tratamiento natural de 7 días para revitalizar tu mirada. 
+                            FreshLook Aloe combina la frescura del aloe vera con un efecto descongestivo que ayuda a 
+                            reducir la apariencia de ojeras y bolsas. Ideal para quienes buscan un cuidado constante 
+                            y resultados visibles en una semana.</p>
+                    </div>
+                </div>
+
+                <div class="bg-white rounded-xl shadow-md overflow-hidden card-hover">
+                    <div
+                        class="h-48 bg-gradient-to-br from-[var(--primary)] to-[var(--secondary)] flex items-center justify-center">
+                        <i class="fas fa-eye text-white text-5xl floating"></i>
+                    </div>
+                    <div class="p-6">
+                        <h3 class="text-xl font-semibold mb-3 text-[var(--primary)]">FreshLook Aloe - Mini</h3>
+                        <p class="text-gray-600 mb-4">Versión práctica de 4 días para refrescar y aliviar tu mirada. 
+                            FreshLook Aloe Mini es perfecto para quienes quieren probar el tratamiento o necesitan un 
+                            refuerzo rápido antes de un evento especial.</p>
                     </div>
                 </div>
 
@@ -672,9 +686,12 @@
                         <i class="fas fa-spa text-white text-5xl floating"></i>
                     </div>
                     <div class="p-6">
-                        <h3 class="text-xl font-semibold mb-3 text-[var(--primary)]">Gel de Aloe Vera Puro</h3>
-                        <p class="text-gray-600 mb-4">Hidratante natural para todo tipo de piel, con propiedades
-                            regenerativas.</p>
+                        <h3 class="text-xl font-semibold mb-3 text-[var(--primary)]">PureAloe 1L</h3>
+                        <p class="text-gray-600 mb-4">Disfruta de la pureza del aloe vera en cada gota. PureAloe es 
+                            jugo de aloe vera 100% natural, sin aditivos ni conservantes, ideal para cuidar tu 
+                            bienestar desde adentro hacia afuera. Puedes tomarlo para apoyar la digestión, 
+                            la hidratación y el sistema inmunológico, o usarlo de forma externa en la piel y
+                             el cabello para un cuidado natural y profundo.</p>
                     </div>
                 </div>
 
@@ -739,12 +756,17 @@
                             <span>info@aloefresh.com</span>
                         </li>
                         <li class="flex items-start">
-                            <i class="fas fa-phone mt-1 mr-3 text-[var(--secondary)]"></i>
-                            <span>+595 XX XXXX XXX</span>
+                            <i href="https://www.instagram.com/aloe_fresh_" class="fab fa-instagram mt-1 mr-3 text-[var(--secondary)]"></i>
+                            <a href="https://www.instagram.com/aloe_fresh_">aloe_fresh_
+                            </a>
+                        </li>
+                        <li class="flex items-start">
+                            <a class="fas fa-phone mt-1 mr-3 text-[var(--secondary)]"></a>
+                            <span>(021)350400</span>
                         </li>
                         <li class="flex items-start">
                             <i class="fas fa-map-marker-alt mt-1 mr-3 text-[var(--secondary)]"></i>
-                            <span>Asunción, Paraguay</span>
+                            <span>Ñemby- Paraguay</span>
                         </li>
                     </ul>
                 </div>
