--- a/solertia.html
+++ b/solertia.html
@@ -688,11 +688,11 @@
                         </li>
                         <li class="flex items-start">
                             <i class="fas fa-phone mt-1 mr-3 text-[var(--secondary)]"></i>
-                            <span>+595 XX XXXX XXX</span>
+                            <span>(021) 122 555</span>
                         </li>
                         <li class="flex items-start">
                             <i class="fas fa-map-marker-alt mt-1 mr-3 text-[var(--secondary)]"></i>
-                            <span>Asunción, Paraguay</span>
+                            <span>Avda. Independencia Nacional calle 9 de Agosto</span>
                         </li>
                     </ul>
                 </div>
