--- a/ecopaper.html
+++ b/ecopaper.html
@@ -227,9 +227,8 @@
                 <div>
                     <h3 class="text-xl font-semibold mb-4">Redes Sociales</h3>
                     <div class="flex space-x-4">
-                        <a href="#" class="hover:text-green-300">Facebook</a>
-                        <a href="#" class="hover:text-green-300">Instagram</a>
-                        <a href="#" class="hover:text-green-300">LinkedIn</a>
+                        <i class="fab fa-instagram mt-1 mr-3 text-[var(--secondary)]"></i>
+                        <a href="https://www.instagram.com/ecopapers.a/" target="_blank"  class="hover:text-green-300">Instagram</a>
                     </div>
                 </div>
             </div>
